--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <script src="p5.dom.min.js"></script>
         <script src="p5.sound.min.js"></script>
         <script src="./p5.play.js"></script>
+        <script src="./matter.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta charset="utf-8">
         <script src="https://unpkg.com/matter-js@0.14.2/build/matter.min.js"></script>
         <script src="js/Security.js"></script>
         <script src="js/Code.js"></script>
         <script src="js/System.js"></script>
+        <script src="js/Puzzle.js"></script>
     </head>
 
     <body>
